<resources>
    <string name="app_name">Neko 11</string>
    <string name="app_name_neko">Neko 11</string>
    <string name="dynamic_color">Dynamic colors</string>
    <string name="dynamic_color_sub">Automatically select an accent color based on the color of your wallpaper. Work only on Android 12+</string>
	<string name="save_changes">Changes successfully saved</string>
	<string name="choosetheme">Choose accent color</string>
	<string name="dark_theme_auto">Auto dark theme</string>
	<string name="dark_theme_auto_sub">If dark theme is enabled on your device, the app will adapt automatically</string>
    <string name="back">Back</string>
    <string name="notification_name">Neko 11</string>
    <string name="promo">Promo code</string>
    <string name="notification_channel_name">New cats</string>
    <string name="default_tile_name">\????</string>
    <string name="notification_title">A cat is here.</string>
    <string name="notification_title_return">A cat has returned.</string>
    <string name="default_cat_name">Cat #%s</string>
    <string name="directory_name">Cats</string>
    <string name="cat_controls">Cat Controls</string>
    <string name="collection">Collection</string>
    <string name="control_toy_title">Toy</string>
    <string name="control_toy_subtitle">Tap to use</string>
    <string name="control_toy_status">Cat attracted!</string>
    <string name="control_water_title">Water bubbler</string>
    <string name="control_water_subtitle">Click to fill</string>
    <string name="control_food_title">Food bowl</string>
    <string name="control_food_subtitle">Tap to refill</string>
    <string name="control_food_status_full">Full</string>
    <string name="control_food_status_empty">Empty</string>
    <string name="settings">Settings</string>
    <string name="cat_counter">Collected cats: %d</string>
    <string name="about_neko">About Neko</string>
    <string name="help">Help</string>
	<string name="achievements">Achievements</string>
    <string name="help_message">Welcome to Neko! For start play click «Cat Controls» on bottom bar and fill all tiles. Then close app. If cat arrive, I send you notification. After you cat send cat your friends, or continue collect cats. Do not forget check tiles, because after arrive cat\'s eat your food and drink water. Good luck! </string>
    <string name="background_changed">Restart the application</string>
    <string name="later">Later</string>
    <string name="restart">Restart</string>
    <string name="success">Success</string>
    <string name="water_state_ml">%.0f mL</string>
    <string name="dark_theme">Enable dark theme</string>
    <string name="compact_view">Use compact view in Cat Controls</string>
    <string name="accent_choose">Choose accent color</string>
    <string name="open_settings">Open settings in system</string>
    <string name="meow_meow">Meow Meow.</string>
    <string name="permission_denied">I can\'t save picture, because permission denied. Please try again.</string>
    <string name="picture_saved_successful">Picture «%s» saved in /Pictures/Cats/. You can see it in gallery app.</string>
    <string name="about_text">Neko11 is a game about cats, which is developed by a small team in their spare time. We hope you enjoyed this app.</string>
	<string name="about_dev1">dimon6018 (queuejw) - probably did the biggest job</string>
	<string name="about_dev2">AlertKaput - help finding bugs</string>
	<string name="about_dev3">MG30 - cool ideas, help finding bugs, and test first alpha versions</string>
	<string name="about_dev4">ZaCCCP- help finding bugs, аnd test dynamic colors</string>
	<string name="about_dev5">DarkFox - testing first versions and first collect 100 cats</string>
	<string name="about_you">And you &#10084;</string>
	<string name="rename_cat_title">Rename this cat!</string>
    <string name="input_sub">Type name here</string>
	<string name="openurl">Open GitHub</string>
    <string name="update_toast">Download update, if it available</string>
    <string name="return_to_collection">Return to collection</string>
    <string name="email">Send me funny SMS: dimon6018t@gmail.com</string>
	<string name="get_prize">Get prize</string>
	<string name="welcome_dialog">Welcome to Neko11. Let me teach you the basics of the game. First, pick up your gift (free).</string>
	<string name="save_title">Save</string>
	<string name="del_title">Remove</string>
	<string name="rename_title">Rename</string>
	<string name="cat_status_string">Cat status: %s</string>
	<string name="input_sub_promo">Type promo</string>
	<string name="activation_tip">Try rotate this 3 times =)</string>
	<string name="github">Neko11 in GitHub (Source code)</string>
	<string name="gift_not_enabled">Retrieved</string>
	<string name="delete_cat_message">Do you really want delete this cat?</string>
	<string name="delete_cat_title">Delete cat</string>
	<string name="max_cat_line_title">Sets the number of cats in one line</string>
	<string name="cat_age">Cat age: %d y.o.</string>
	<string name="themeChanged">Restart Neko11 to apply the theme</string>
	<string name="name_changed">Cat name changed!</string>
	<string name="new_code_generated">Congratulations! You have successfully completed this achievement. As a reward, keep this code: <b><i>%s</i></b>. You can activate it in the menu by selecting "Promo code"</string>
	<string name="get_old_code">You have already received an award. If you forgot the code, here you go: <b><i>%s</i></b> </string>
	<string name="wrong_code">Wrong code, try again</string>
	<string name="copy">Copy</string>
	<string name="coins"><b>You have: %d NCoins</b></string>
	<string name="code_is_true">Code accepted. Award received.</string>
	<string name="code_is_false">This code has already been used.</string>
	<string name="controls_first">Open «Cat Controls» first</string>
	<string name="controls_first_sub">Allows you to see "Cat Controls" as soon as you open Neko11. Can speed up the launch of the application if you have a lot of cats.</string>
	<string name="cat_size_title">Sets the size of the cat icon.</string>
	<string name="open_controls_tip">Open Cat Controls.</string>
	<string name="fill_tiles_tip">Fill all tiles.</string>
	<string name="welcome_dialog_part2">Here are your first cats :3 Click on the cat to bring up a menu where you can control it.</string>
	<string name="welcome_dialog_part3">To fill a tile, click on it. You can then close the app. You will receive a notification when the cat comes to you. That\'s basically it. Good luck =)</string>
    <string name="backup_restore">Restore my data</string>
    <string name="backup_save">Save my data</string>
    <string name="backup_title">Restore</string>
    <string name="backup_wipe_cats">Delete my data</string>
    <string name="backup_done">Restore successfully completed. The file Neko11mBackup.xml has been saved to the device.</string>
    <string name="restore_failed">Oops. Something went wrong. Your data could not be restored. Sorry =(</string>
    <string name="restore_done">Restoring your data successfully completed.</string>
    <string name="backup_failed">Oops. Something went wrong. Your data cannot be saved. Maybe not all permissions were given to the application.</string>
	<string name="sort_standart">By color</string>
	<string name="sort_name">By name</string>
	<string name="sort_title">Cat sorting</string>
	<string name="sort_off">Off</string>
	<string name="pink">Pink</string>
	<string name="red">Red</string>
	<string name="orange">Yellow</string>
	<string name="green">Green</string>
	<string name="lime">Lime</string>
	<string name="aqua">Turquoise</string>
	<string name="blue">Blue</string>
	<string name="purple">Purple</string>
	<string name="a1">I love cat\'s!</string>
	<string name="a2">I\'m a pro</string>
	<string name="a3">Lord of cat\'s</string>
	<string name="a4">Impossible is possible!</string>
	<string name="a1sub">Collect 10 cat\'s</string>
	<string name="a2sub">Collect 50 cat\'s</string>
	<string name="a3sub">Collect 100 cat\'s</string>
	<string name="a4sub">Collect 1000 cat\'s</string>
    <string name="a5">Happy owner</string>
    <string name="a5sub">Get the maximum mood \n level of 25 cats.</string>
    <string name="a6">Gamer</string>
    <string name="a6sub">Score 100 points in the Jumper game at 1 time</string>
	<string name="details">Details</string>
	<string name="neko_info_ver_name">Neko11 version: %s</string>
	<string name="neko_info_ver_code">Version code: %d</string>
	<string name="neko_info_android_ver">Android version (API): %d</string>
    <string name="unsupported_android">Your version of Android lacks some important features for the app to work. You can keep playing, but some of the features will not be available or broken.</string>
    <string name="next">Next</string>
    <string name="backup_action_choose">What do you want to do?</string>
    <string name="select">Select</string>
    <string name="select_backup_file">Select a backup file</string>
    <string name="saving_cats">Saving your data..</string>
    <string name="moment">Just a moment..</string>
    <string name="working">The task is in progress..</string>
    <string name="force_get_perms">Forced to get permits</string>
    <string name="task_success">The operation is complete.</string>
    <string name="welcome_dialog_final">Have fun playing!</string>
    <string name="wash_cat_title">Bathe</string>
    <string name="caress_cat_title">Caress</string>
    <string name="touch_cat_title">Touch</string>
    <string name="aosp">Our game is based on another game from Android 11 and I want to thank its original developers, they gave me the inspiration to rethink the game and make it even more comfortable. Thank you! Check it out here: https://source.android.com/</string>
    <string name="about_dev6">SuperRofler - help in finding bugs, identifying critical errors, moral support</string>
    <string name="open">Open</string>
    <string name="mystery_box">Mystery box</string>
    <string name="random_cat">Random cat</string>
    <string name="meow">Meow</string>
    <string name="shh">Shhhhhhhh</string>
    <string name="ops">Ops!</string>
    <string name="touch_cat_error">The cat didn\'t like that you touched him and bit you =)</string>
    <string name="mood">Mood: %s</string>
    <string name="mood1">Very sad</string>
    <string name="mood2">Sad</string>
    <string name="mood3">Good</string>
    <string name="mood4">Very good</string>
    <string name="mood5">Great</string>
    <string name="boosters_title">Boosters</string>
    <string name="booster_items">You have: %d</string>
    <string name="choose_booster">Choose boosters</string>
    <string name="booster1_title">Vitamin of happiness</string>
    <string name="booster1_sub">Increases a cat\'s happiness level to maximum</string>
    <string name="booster2_title">Lucky pill</string>
    <string name="booster2_sub">Cats bring happiness into the home. Now the new cat will come faster</string>
    <string name="telegram">Our channel in Telegram</string>
    <string name="stat_1">You\'ve collected a total of %d cats</string>
    <string name="stat_2">You used %d boosters</string>
    <string name="stat_3">You poured %d mL of water</string>
    <string name="stat_4">You\'ve tried interacting with cats %d times</string>
    <string name="save_title_all">Save all the cats</string>
    <string name="error">Error</string>
    <string name="critical_error_tip">A critical error occurred during operation. Perhaps you should just restart the application. You can help fix this bug. \nClick Details and then send us the information: github.com/queuejw/neko11/issues (GitHub) \nOR t.me/neko_app (Telegram) \nOR dimon6018t@gmail.com (Email).</string>
    <string name="crash_clear_settings">Clear settings (This won\'t affect your cats)</string>
    <string name="crash_restart">Restart Neko11</string>
    <string name="crash_settings">Open settings</string>
</resources>