<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2023 Dmitry Frolkov <dimon6018t@gmail.com>
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
	    android:title="@string/pink"
        android:id="@+id/pink_theme"  />

    <item
        android:id="@+id/red_theme"
        android:title="@string/red" />
		
    <item
        android:id="@+id/orange_theme"
        android:title="@string/orange" />

    <item
        android:id="@+id/green_theme"
        android:title="@string/green" />

    <item
        android:id="@+id/lime_theme"
        android:title="@string/lime" />
		
	<item
        android:id="@+id/aqua_theme"
        android:title="@string/aqua" />
		
	<item
        android:id="@+id/blue_theme"
        android:title="@string/blue" />
		
	<item
        android:id="@+id/purple_theme"
        android:title="@string/purple" />
</menu>