<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2023 Dmitry Frolkov <dimon6018t@gmail.com>
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:title="@string/achievements"
		android:icon="@drawable/ic_game"
		android:id="@+id/achievementsMenuId"
		app:showAsAction="ifRoom"
		app:itemTextAppearance="@font/opensans_regular"/>
	<item
		android:title="@string/settings"
		android:icon="@drawable/ic_settings"
		android:id="@+id/settingsMenuId"
		app:itemTextAppearance="@font/opensans_regular"/>
	<item 
	     android:title="@string/promo"
        android:icon="@drawable/key"
        android:id="@+id/promoMenuId"  
	    app:itemTextAppearance="@font/opensans_regular"/>
    <item 
	    android:title="@string/about_neko"
        android:icon="@drawable/ic_11"
        android:id="@+id/aboutMenuId"
    	app:itemTextAppearance="@font/opensans_regular"/>
</menu>
