<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2023 Dmitry Frolkov <dimon6018t@gmail.com>
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
  <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	  android:layout_width="match_parent"
    android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/cord"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_optimizationLevel="standard">

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/white_switch"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="28dp"
			android:layout_marginEnd="40dp"
			android:layout_marginStart="15dp"
			android:text="@string/dark_theme"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.254"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/white_switch_auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="40dp"
			android:layout_marginStart="15dp"
			android:text="@string/dark_theme_auto"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.254"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/white_switch" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/dark_theme_auto_sub"
			android:layout_width="351dp"
			android:layout_height="41dp"
			android:layout_marginTop="48dp"
			android:layout_marginBottom="49dp"
			android:text="@string/dark_theme_auto_sub"
			android:textSize="12sp"
			app:fontFamily="@font/opensans_regular"
			app:layout_constraintBottom_toBottomOf="@+id/linear_controls_enable"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.35"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/white_switch_auto"
			app:layout_constraintVertical_bias="0.0" />

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/linear_controls_enable"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="40dp"
			android:layout_marginStart="15dp"
			android:layout_marginTop="60dp"
			android:text="@string/compact_view"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.254"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/white_switch_auto" />

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/is_first_controls"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/controls_first"
			android:textSize="18sp"
			android:layout_marginEnd="40dp"
			android:layout_marginStart="15dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.254"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/linear_controls_enable" />


		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/is_first_controls_sub"
			android:layout_width="331dp"
			android:layout_height="49dp"
			android:layout_marginTop="4dp"
			android:text="@string/controls_first_sub"
			android:textSize="12sp"
			app:fontFamily="@font/opensans_regular"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.487"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/is_first_controls" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/choosetheme"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/choosetheme"
			app:icon="@drawable/ic_brush"
			app:layout_constraintBottom_toTopOf="@+id/dynamic_color"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/cat_size_slider"
			app:layout_constraintVertical_bias="0.783" />

		<com.google.android.material.button.MaterialButtonToggleGroup
			android:id="@+id/sortgroup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			app:layout_constraintBottom_toTopOf="@+id/guideline7"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/dyncolor_sub"
			app:layout_constraintVertical_bias="0.098"
			app:singleSelection="true">
			<com.google.android.material.button.MaterialButton
				android:id="@+id/sortname"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sort_name"
				app:layout_constraintBaseline_toBaselineOf="@+id/sortstandart"
				app:layout_constraintStart_toStartOf="@+id/max_cat_line_slider" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/sortstandart"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sort_standart"
				app:layout_constraintStart_toStartOf="@+id/max_cat_line_slider" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/sortoff"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="108dp"
				android:layout_height="wrap_content"
				android:text="@string/sort_off"
				app:layout_constraintBaseline_toBaselineOf="@+id/sortstandart"
				app:layout_constraintEnd_toEndOf="@+id/max_cat_line_slider" />

		</com.google.android.material.button.MaterialButtonToggleGroup>

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/dynamic_color"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="108dp"
			android:layout_marginEnd="40dp"
			android:layout_marginStart="15dp"
			android:text="@string/dynamic_color"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.49"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/cat_size_slider" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/dyncolor_sub"
			android:layout_width="339dp"
			android:layout_height="53dp"
			android:text="@string/dynamic_color_sub"
			android:textSize="12sp"
			app:fontFamily="@font/opensans_regular"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.458"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/dynamic_color" />

		<com.google.android.material.slider.Slider
			android:id="@+id/max_cat_line_slider"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginEnd="10dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="24dp"
			android:stepSize="1.0"
			android:valueFrom="2.0"
			android:valueTo="4.0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.447"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/is_first_controls_sub" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/max_cat_line_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/max_cat_line_title"
			android:textSize="14sp"
			app:fontFamily="@font/opensans_regular"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/max_cat_line_slider" />

		<com.google.android.material.slider.Slider
			android:id="@+id/cat_size_slider"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginEnd="10dp"
			android:layout_marginStart="10dp"
			android:stepSize="10.0"
			android:valueFrom="100.0"
			android:valueTo="200.0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/max_cat_line_title" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/cat_size_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="1dp"
			android:layout_marginBottom="56dp"
			android:gravity="center"
			android:text="@string/cat_size_title"
			android:textSize="14sp"
			app:fontFamily="@font/opensans_regular"
			app:layout_constraintBottom_toTopOf="@+id/choosetheme"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/cat_size_slider"
			app:layout_constraintVertical_bias="0.03" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/opensettingsbtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:text="@string/open_settings"
			app:icon="@drawable/ic_open_in"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.914"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/recovery_btn" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/get_neko_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/details"
			android:textSize="14sp"
			app:fontFamily="@font/opensans_regular"
			app:icon="@drawable/ic_info"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.948"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/opensettingsbtn"
			app:layout_constraintVertical_bias="0.166" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/sorttitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/sort_title"
			android:textSize="12sp"
			app:fontFamily="@font/opensans_regular"
			app:layout_constraintBottom_toTopOf="@+id/sortgroup"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/dyncolor_sub"
			app:layout_constraintVertical_bias="1.0" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/recovery_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="212dp"
			android:layout_marginTop="8dp"
			android:text="@string/backup_title"
			android:textSize="14sp"
			app:fontFamily="@font/opensans_regular"
			app:icon="@drawable/ic_recovery"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.944"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/sortgroup"
			app:layout_constraintVertical_bias="0.0" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_begin="1080dp" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
