<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2023 Dmitry Frolkov <dimon6018t@gmail.com>
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->

 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/imageViewCat"
			android:layout_width="84dp"
			android:layout_gravity="center"
			android:layout_height="100dp" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/abouttitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/app_name"
			android:textSize="22sp"
			app:fontFamily="@font/opensans_medium"/>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/abouttext"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="48dp"
			android:gravity="center"
			android:text="@string/about_text"
			android:textSize="18sp"
			app:fontFamily="@font/opensans_regular" />

		<include
			android:id="@+id/include"
			layout="@layout/authors"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/github_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="11dp"
			android:text="@string/github"
			app:icon="@drawable/ic_neko_version_code" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/telegram_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="16dp"
			android:text="@string/telegram"
			app:icon="@drawable/ic_plane"/>
		<com.google.android.material.button.MaterialButton
			android:id="@+id/save_all_cats"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="11dp"
			android:text="@string/save_title_all"
			app:icon="@drawable/ic_fullcat_icon" />
	</LinearLayout>
</ScrollView>
