<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingTop="?attr/dialogPreferredPadding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cat_count_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/stat_1"
            app:fontFamily="@font/opensans_regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/booster_count_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/stat_2"
            app:fontFamily="@font/opensans_regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/water_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/stat_3"
            app:fontFamily="@font/opensans_regular" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cat_actions_use_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/stat_4"
            app:fontFamily="@font/opensans_regular" />
    </LinearLayout>
</FrameLayout>